welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:7: error: illegal start of simple expression
if (estSurBiscuit && nb!=4);
                           ^